<resources>
    <string name="app_name">Private</string>
    <string name="facebook_id" translatable="false">1672155173024840</string>
    <string name="server_client_id" translatable="false">468362986506-127hrg3be2s74r9qoorcvktbmcva4b2l.apps.googleusercontent.com</string>
    <string name="android_api_key" translatable="false">AIzaSyB9h3_UFrSt3E2sF2wJNPYroJWNFQ6JbpQ</string>
    <string name="project_number" translatable="false">468362986506</string>
    <string name="server_api_key" translatable="false">AIzaSyDFOXx5F4yGcSOy0vJdL096NrL073NZ8yY</string>
    <string name="currency">EGP</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="call">Call</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading…</string>
    <string name="or">OR</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="verify_your_account">Verify Your Account</string>
    <string name="verification_code">Verification Code</string>
    <string name="done">Done</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="question_mark">" ?"</string>
    <string name="question_mark_without_space">"?"</string>
    <string name="menu">Menu</string>
    <string name="book_a_lift">Book A Lift</string>
    <string name="my_rides">My Rides</string>
    <string name="fares">Prices</string>
    <string name="settings">Settings</string>
    <string name="call_us">Call Us</string>
    <string name="message_center">Message Center</string>
    <string name="promo_code">Promo Code</string>
    <string name="tell_a_friend">Tell A Friend</string>
    <string name="about">About</string>
    <string name="tell_friends_to_earn_money">Tell friends to earn money</string>
    <string name="welcome">Welcome</string>
    <string name="your_id">Your ID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now">now</string>
    <string name="pick_you_up_soon">pick you up soon</string>
    <string name="later">later</string>
    <string name="scheduled_pick_up">scheduled pick up</string>
    <string name="your_photo">your photo</string>
    <string name="car_photo">car photo</string>
    <string name="id_front">ID Front</string>
    <string name="id_back">ID Back</string>
    <string name="driver_licence_front">Driver Licence Front</string>
    <string name="driver_licence_back">Driver Licence Back</string>
    <string name="car_licence_front">Car Licence Front</string>
    <string name="car_licence_back">Car Licence Back</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="driver_signup_confirmation_message">We will contact you as soon as possible to come to the company with required papers, please check your email for importance.</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="statements">Statement</string>
    <string name="ratings">Ratings</string>
    <string name="account">Account</string>
    <string name="messages">Messages</string>
    <string name="low_crowd_clients"><![CDATA[< 999 Clients]]></string>
    <string name="medium_crowd_clients">1000–1999 Clients</string>
    <string name="high_crowd_clients"><![CDATA[> 2999 Clients]]></string>
    <string name="today_profit">TODAY PROFIT</string>
    <string name="total_trips">TOTAL TRIPS</string>
    <string name="total_hours">TOTAL HOURS</string>
    <string name="be_active">Be Active</string>
    <string name="online">Online</string>
    <string name="search_for_period">Search For Period</string>
    <string name="add_car">Add A Car</string>
    <string name="your_documents">Your Documents</string>
    <string name="about_private">About Private</string>
    <string name="sign_out">Sign Out</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="decline_reason">Decline Reason</string>
    <string name="why_decline_ride">Please tell us why you decline the ride?!</string>
    <string name="car_accident">Car Accident</string>
    <string name="overcrowded_roads">Overcrowded Roads</string>
    <string name="praying">Praying</string>
    <string name="other">Other</string>
    <string name="write_decline_reason">Write the decline reason…</string>
    <string name="send">Send</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="full_day">Full Day</string>
    <string name="where_should_we_pick_you_up">Where should we pick you up?</string>
    <string name="min">min</string>
    <string name="your_ride">Your Ride</string>
    <string name="pickup">Pickup</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="verify">Verify</string>
    <string name="dropoff">Dropoff</string>
    <string name="i_will_guide_the_captain">I will guide the driver</string>
    <string name="add_details">Add\nDetails</string>
    <string name="add_dropoff">Add\n Dropoff</string>
    <string name="pickup_time">Pickup time</string>
    <string name="as_soon_as_possible">As soon as possible</string>
    <string name="car_type">Car type</string>
    <string name="estimate">Estimate</string>
    <string name="add_dropoff_to_estimate">Add dropoff to estimate</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="notes_to_captain">Notes to driver</string>
    <string name="promo_codes">Promo codes</string>
    <string name="go">Go!</string>
    <string name="payment_by_customer_credit_done">Payment by Customer\'s Credit Card Done.</string>
    <string name="please_type_comment_here">Please write your comment here…</string>
    <string name="customer_behaved_badly">The customer behaved badly</string>
    <string name="customer_arrived_late">The customer arrived tool late</string>
    <string name="customer_made_illegal_action">The customer made an illegal action</string>
    <string name="rate">Rate</string>
    <string name="add_details_for_pick_up">Add details for pickup location that will help the driver find you.</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="trips">Trips</string>
    <string name="profit">Profit</string>
    <string name="search_for_place">Search for a place</string>
    <string name="select_on_map">Select on map</string>
    <string name="select_pickup_time">Set Pickup Time</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="select_car_type">Select Car Type</string>
    <string name="economy_4_people">Economy\n4 People</string>
    <string name="business_4_people">Business\n4 People</string>
    <string name="full_day_4_people">Full Day\n4 People</string>
    <string name="enter_here">Enter here</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="select_car">Select Car</string>
    <string name="both_economy_business">Both (Economy + Business)</string>
    <string name="driver_add_car_confirmation_message">The car will be added after we review it.</string>
    <string name="message_details">Message Details</string>
    <string name="select_full_day_car_type">Select full day car type</string>
    <string name="business_1_people">Business\n1 People</string>
    <string name="ride_no">Ride No</string>
    <string name="ride_no_c">Ride No:</string>
    <string name="driver_c">Driver:</string>
    <string name="car_c">Car:</string>
    <string name="avg">AVG</string>
    <string name="travel_price_c">Travel Price:</string>
    <string name="current_statement_c">Current Statement:</string>
    <string name="current_balance_c">Current Balance:</string>
    <string name="card_no">Card NO.</string>
    <string name="name">Name</string>
    <string name="cvv">CVV</string>
    <string name="exp_mm_yy">EXP&#160;&#160;&#160;&#160;&#160;&#160;MM/YY</string>
    <string name="country">Country</string>
    <string name="receipt_no_c">Receipt No.:</string>
    <string name="receipt">Receipt</string>
    <string name="ok">OK</string>
    <string name="driver_behaviour_worse">The driver behaviour Worse</string>
    <string name="car_not_clean">The car isn\'t clean</string>
    <string name="driver_arrived_too_late">Driver arrived too late</string>
    <string name="lack_of_knowledge_of_places">Lack of knowledge of the driver places</string>
    <string name="driver_id_c">Driver ID:</string>
    <string name="thank_you">Thank You</string>
    <string name="pickup_address">Pickup Address:</string>
    <string name="drop_off_address">Drop Off Address:</string>
    <string name="price">Price:</string>
    <string name="date_head">Date:</string>
    <string name="counter_start">Counter start = </string>
    <string name="_1_km">1 KM = </string>
    <string name="_1_min_wait">1 Min wait = </string>
    <string name="change_password">Change Password</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="language">Language</string>
    <string name="tell_friends">Tell Friends</string>
    <string name="customer_services">Customer Services</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="re_type_new_password">Re-type new password</string>
    <string name="we_support_visa_master">We currently support Visa and MasterCard</string>
    <string name="credit_card_will_be_debited_by_1_egp">Your credit card will be debited by 1 EGP to verify the card.
        Dont\'t worry, this amount will be fully re-funded.</string>
    <string name="change_language">Change Language</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="app_version">App Version</string>
    <string name="website_c">Website:</string>
    <string name="update_now">Update Now</string>
    <string name="required">Required</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="loading_please_wait">Loading, please wait…</string>
    <string name="gps_option">GPS Option</string>
    <string name="enable_gps_to_use_app">To use this app you should turn on your GPS so please go to settings and turn it on.</string>
    <string name="unexpected_error_try_again">Unexpected error, try again</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="connection_error">Connection error</string>
    <string name="hours">Hours</string>
    <string name="not_valid_email">Not Valid Email</string>
    <string name="not_valid_mobile">Not Valid Mobile</string>
    <string name="registering">Registering</string>
    <string name="short_password">Short Password</string>
    <string name="credit_card">Credit Card</string>
    <string name="account_credit">Account Credit</string>
    <string name="install_google_play_services">Please install Google Play Services</string>
    <string name="offline">Offline</string>
    <string name="today_trips">Today Trips</string>
    <string name="today_hours">Today Hours</string>
    <string name="driverTrips">Trips</string>
    <string name="please_choose_from_date">Please choose from date</string>
    <string name="please_choose_to_date">Please choose to date</string>
    <string name="loading_your_statements">Loading your statements, please wait…</string>
    <string name="no_statements_found_in_this_period">No statements found in this period</string>
</resources>