<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/nav_icon_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_statement"
            android:icon="@drawable/nav_icon_statement"
            android:title="@string/statement" />
        <item
            android:id="@+id/nav_ratings"
            android:icon="@drawable/nav_icon_ratings"
            android:title="@string/ratings" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/nav_icon_account"
            android:title="@string/account" />

        <item
            android:id="@+id/nav_message_center"
            android:icon="@drawable/nav_icon_messages"
            android:title="@string/message_center" />

    </group>
</menu>