<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/linearlayout_vertical_divider_transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    android:showDividers="middle"
    tools:context="com.privatecar.privatecar.activities.DriverRateTripActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/petroleum_rounded_corners_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            style="@style/white_normal_bold_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ride No: " />

        <TextView
            style="@style/white_normal_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AA1234" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/petroleum_rounded_corners_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            style="@style/white_normal_bold_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_id_c" />

        <TextView
            style="@style/white_normal_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" AA1234" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="3"
        android:stepSize="0.5"
        android:theme="@style/GoldenRatingBarTheme" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_behaviour_worse" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_not_clean" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_arrived_too_late" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lack_of_knowledge_of_places" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />

    </RadioGroup>

    <ScrollView
        android:background="@drawable/edit_text_rounded_grayish_border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1">

        <EditText
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:background="@null"
            android:gravity="start|top"
            android:hint="@string/please_type_comment_here"
            android:inputType="textMultiLine" />
    </ScrollView>

    <Button
        android:id="@+id/btn_rate"
        style="@style/submit_yellowish_button_with_half_star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:textSize="@dimen/large_text_size" />

</LinearLayout>
