<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/petroleum_rounded_corners_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/white_normal_bold_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ride_no" />

        <TextView
            style="@style/white_normal_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" AA1234" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/petroleum_rounded_corners_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            style="@style/white_normal_bold_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel_price_c" />

        <TextView
            style="@style/white_normal_capitalized_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" 100 EGP" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_no"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cvv"
                android:inputType="text"
                android:nextFocusDown="@+id/et_mm_yy"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_mm_yy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/exp_mm_yy"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/submit_yellowish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium" />
</LinearLayout>