<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/tv_promo_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promo_code"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_promo_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_promo_code"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_rounded_grayish_border"
        android:gravity="start|top"
        android:hint="@string/enter_here"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textAppearance="?android:textAppearanceSmall" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/petroleum_rounded_corners_shape"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white" />
</RelativeLayout>